--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: home
-title: "Welcome to the Neo-HPSTR Blog"
-description: "Describe this nonsense."
-tags: [Jekyll, theme, themes, responsive, blog, modern]
+title: "Welcome to the Saheb's Blog"
+description: "Saheb Ghosh's blog"
+tags: [ComputerScience, Gaming, Philosophy]
 comments: false
 ---
 
