--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: "Welcome to the Saheb's Blog"
+title: "Welcome to Saheb's Blog"
 description: "Saheb Ghosh's blog"
 tags: [ComputerScience, Gaming, Philosophy]
 sitemap:
